@@ -53,7 +53,22 @@ package Package1 {
 
 ** Implement the textual export for `StateUsage` and `StateDefinition`.
 ** Implement the textual export for `TransitionUsage`.
-
+** Implement the textual export for `ExhibitStateUsage` such as in:
++
+```
+package root {
+    part part1 {
+        exhibit state s1 {
+            /* doc */
+        }
+    }
+    part part2 {
+        exhibit part1.s1 {
+            /* doc */
+        }
+    }
+}
+```
 
 == Technical details
 
